--- a/releasetasks/templates/desktop/source.yml.tmpl
+++ b/releasetasks/templates/desktop/source.yml.tmpl
@@ -80,7 +80,7 @@
                     platform: linux64
                 build:
                     platform: linux64
-            {{ task_notifications("{} source generation".format(branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} source generation".format(product, version, buildNumber, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
 
 -
     taskId: "{{ stableSlugId(buildername_signing) }}"
