--- a/releasetasks/templates/desktop/version_bump.yml.tmpl
+++ b/releasetasks/templates/desktop/version_bump.yml.tmpl
@@ -42,4 +42,4 @@
 
         extra:
             {{ common_extras(taskname=buildername, locales=["null"], platform="null") | indent(12)}}
-            {{ task_notifications("{} {} version bump".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} version bump".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
