--- a/releasetasks/templates/mobile/push_to_releases.yml.tmpl
+++ b/releasetasks/templates/mobile/push_to_releases.yml.tmpl
@@ -45,7 +45,7 @@
 
         extra:
             {{ common_extras(taskname='{}_human_decision'.format(push_to_releases_basename), locales=["null"], platform="null") | indent(12)}}
-            {{ task_notifications("{} {} push to releases human decision task".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} push to releases human decision task".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
 
 {% endif %}
 
