--- a/releasetasks/templates/desktop/l10n_changesets.yml.tmpl
+++ b/releasetasks/templates/desktop/l10n_changesets.yml.tmpl
@@ -57,7 +57,7 @@
                 build:
                     platform: linux64
             l10n_changesets: "{{ format_l10n_changesets(l10n_changesets) }}"
-            {{ task_notifications("{} L10N changesets".format(branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} L10N changesets".format(product, version, buildNumber, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
 
 
 
