--- a/releasetasks/templates/desktop/push_to_releases.yml.tmpl
+++ b/releasetasks/templates/desktop/push_to_releases.yml.tmpl
@@ -110,4 +110,4 @@
                     platform: linux64
                 build:
                     platform: linux64
-            {{ task_notifications("[beetmover] {} {} push to releases".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] [beetmover] {} {} push to releases".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
