--- a/releasetasks/templates/desktop/snap.yml.tmpl
+++ b/releasetasks/templates/desktop/snap.yml.tmpl
@@ -70,7 +70,7 @@
                     platform: linux64
                 build:
                     platform: linux64
-            {{ task_notifications("{} snap generation".format(branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} snap generation".format(product, version, buildNumber, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
 
 -
     taskId: "{{ stableSlugId(buildername_signing) }}"
