--- a/releasetasks/templates/desktop/tc_update_verify.yml.tmpl
+++ b/releasetasks/templates/desktop/tc_update_verify.yml.tmpl
@@ -71,6 +71,6 @@
                     platform: linux64
                 build:
                     platform: linux64
-            {{ task_notifications("{} {} update verification {}/{}".format(platform, channel, chunk, uv_totalchunks), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} update verification {}/{}".format(product, version, buildNumber, platform, channel, chunk, uv_totalchunks), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
 {% endfor %}
 {% endfor %}
