--- a/releasetasks/templates/mobile/checksums.yml.tmpl
+++ b/releasetasks/templates/mobile/checksums.yml.tmpl
@@ -42,5 +42,5 @@
             source: https://github.com/mozilla/releasetasks
 
         extra:
-            {{ task_notifications("{} {} checksums builder".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} checksums builder".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
             {{ common_extras(taskname=buildername, locales=["null"], platform="null") | indent(12)}}
