--- a/releasetasks/templates/mobile/mark_as_shipped.yml.tmpl
+++ b/releasetasks/templates/mobile/mark_as_shipped.yml.tmpl
@@ -41,4 +41,4 @@
 
         extra:
             {{ common_extras(taskname=buildername, locales=["null"], platform="null") | indent(12)}}
-            {{ task_notifications("{} {} mark release as shipped".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} mark release as shipped".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
