--- a/releasetasks/templates/mobile/publish_balrog.yml.tmpl
+++ b/releasetasks/templates/mobile/publish_balrog.yml.tmpl
@@ -89,5 +89,5 @@
 
         extra:
             {{ common_extras(taskname=buildername, locales=["null"], platform="null") | indent(12)}}
-            {{ task_notifications(taskname="{} {} schedule publishing in balrog".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12)}}
+            {{ task_notifications(taskname="[{} {} build{}] {} {} schedule publishing in balrog".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12)}}
 {% endif %}
