--- a/releasetasks/templates/mobile/uptake_monitoring.yml.tmpl
+++ b/releasetasks/templates/mobile/uptake_monitoring.yml.tmpl
@@ -41,4 +41,4 @@
 
         extra:
             {{ common_extras(taskname=uptake_buildername, locales=["null"], platform="null") | indent(12)}}
-            {{ task_notifications("{} {} uptake monitoring".format(product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
+            {{ task_notifications("[{} {} build{}] {} {} uptake monitoring".format(product, version, buildNumber, product, branch), completed=["releasetasks"], failed=["releasetasks"], exception=["releasetasks"]) | indent(12) }}
